--- a/Part01/login.html
+++ b/Part01/login.html
@@ -6,13 +6,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <h1>Login Page</h1>
-    <p> ID: <input type="text"></p>
-    <p> PW: <input type="text"></p>
-    <button>Login</button>
+    <div class="wrap">
+        <div class="mycontainer">
+            <h1>Login Page</h1>
+            <h5>Type Your ID & PW</h5>
+        </div>
+        <p> ID: <input type="text"></p>
+        <p> PW: <input type="text"></p>
+        <button class="mybtn">Login</button>
+    </div>
 </body>
 
 </html>
